--- a/weblabproject/templates/courseapp/update.html
+++ b/weblabproject/templates/courseapp/update.html
@@ -23,7 +23,7 @@
             <h1 class="text-center">Update Page</h1>
             
             <!-- <form method="post" action="" class=""> -->
-            <form method="post" action="update" class="">
+            <form method="post" action="" class="">
                 {% csrf_token %} 
                 {{form.as_p}}
                 <input type="submit" value="Update Data" class="btn btn-success">
